<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">P0171</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="create">Create</string>
    <string name="clear">Clear</string>

</resources>
